tdf#167538, tdf#167540: better check if the line is dummy

The check in SwTextFrame::PaintExtraData is made the same as in
SwTextFormatter::CalcRealHeight (except for bNewLine, which was
specific to the latter). It allows to recognize real dummy lines
uniformly, and produce line numbering for trailing empty lines.

Change-Id: If2bad4b998b0c48f8f79da52a081e6df7565eee3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188016
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins