sw/source/core/text/frmpaint.cxx
@@ -370,7 +370,6 @@ void SwTextFrame::PaintExtraData( const SwRect &rRect ) const
         aLayoutModeModifier.Modify( false );
 
         SwTextPainter  aLine( const_cast<SwTextFrame*>(this), &aInf );
-        bool bNoDummy = !aLine.GetNext(); // Only one empty line!
 
         while( aLine.Y() + aLine.GetLineHeight() <= rRect.Top() )
         {
@@ -390,7 +389,13 @@ void SwTextFrame::PaintExtraData( const SwRect &rRect ) const
         const bool bIsShowChangesInMargin = pSh->GetViewOptions()->IsShowChangesInMargin();
         do
         {
-            if( bNoDummy || !aLine.GetCurr()->IsDummy() )
+            // A comment from SwTextFormatter::CalcRealHeight:
+            // The dummy flag is set on lines that only contain flyportions. Unfortunately an empty
+            // line can be at the end of a paragraph (empty paragraphs or behind a Shift-Return).
+            if (!aLine.GetCurr()->IsDummy()
+                || (!aLine.GetCurr()->GetNext()
+                    && aLine.GetStart()
+                           >= TextFrameIndex(aLine.GetTextFrame()->GetText().getLength())))
             {
                 SwTwips nExtraSpaceSize = aLine.GetCurr()->GetFirstPortion()->ExtraSpaceSize();
                 if ( nExtraSpaceSize && bWordSpacingIndicator )
